Correct scrollbar on expanded menu

--- a/less/tota11y.less
+++ b/less/tota11y.less
@@ -12,7 +12,7 @@
   border: 2px solid #400099;
   border-radius: 8px 8px 0px 0px;
   /* make it scrollable vertically at 200% zoom */
-  overflow: scroll;
+  overflow: auto;
   max-height: 95%;
   /* end hack */
   z-index: @z-index--UI;
